k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-api-deployment
  namespace: mlops-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-api
  template:
    metadata:
      labels:
        app: mlops-api
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: api
          image: ghcr.io/yannickva/mlops-api:latest
          ports:
            - containerPort: 8000
