k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-frontend-deployment
  namespace: mlops-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-frontend
  template:
    metadata:
      labels:
        app: mlops-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: frontend
          image: ghcr.io/yannickva/mlops-frontend:latest
          ports:
            - containerPort: 8080
