k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlops-api-service
  namespace: mlops-ns
spec:
  type: ClusterIP
  selector:
    app: mlops-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
