k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlops-frontend-service
  namespace: mlops-ns
spec:
  type: ClusterIP
  selector:
    app: mlops-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
